[project]
name = "code-compiler-api"
version = "0.1.0"
description = "A simple API to compile and execute code snippets in various programming languages."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.18",
]
