[project]
name = "Runlet"
version = "0.1.0"
description = "Lightweight REST API for executing single-file code in a sandboxed environment. Supports Java, Python, C++, and JavaScript."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.138.0",
    "pydantic-settings>=2.14.2",
    "slowapi>=0.1.10",
]

[dependency-groups]
dev = [
    "httpx>=0.28.0",
    "poethepoet>=0.30.0",
    "pytest>=8.0.0",
    "ruff>=0.15.18",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.poe.tasks]
format = "ruff format ."
lint = "ruff check ."
test_cpp = "pytest tests/test_cpp.py"
test_java = "pytest tests/test_java.py"
test_python = "pytest tests/test_python.py"
test_js = "pytest tests/test_js.py"
test_all_langs = "pytest tests/test_cpp.py tests/test_java.py tests/test_python.py tests/test_js.py"
test_memory_limit = "pytest tests/test_memory_limit.py"

[tool.poe.tasks.test_prod_memory_limit]
cmd = "pytest tests/test_memory_limit.py"
env = { API_URL = "https://runlet.codealong.live" }
